--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.logo
+{
+    background-color: #4EA0FF;
+    background-image: url(/img/pattern.png);
+}
+
