--- a/css/style.css
+++ b/css/style.css
@@ -38,5 +38,11 @@
 article
 {
     margin-top: 50px;
-    margin bottom: 50px;
+    margin-bottom: 50px;
+}
+
+ul
+{
+    list-style: outside;
+    margin-left: 20px;
 }
