--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,23 @@ table{
 {
     background-color: #B1E5F2;
 }
+
+.related-img-monitor
+{
+    color: #ffffff;
+    padding: 5px;
+    background-image: url(/img/monitor.jpg);
+    background-repeat: no-repeat;
+    height: 200px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.related-img-graph
+{
+    color: #ffffff;
+    padding: 5px;
+    background-image: url(/img/graph.jpg);
+    background-repeat: no-repeat;
+    height: 200px;
+}
